crates/aiken-lang/src/tests/snapshots/format_comment_at_end_of_file.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\ntype Foo =\n  Int\n\n//"
---
type Foo =
  Int
//

