crates/aiken-lang/src/tests/snapshots/format_double_validator_public.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\n    validator foo ( param1 : ByteArray ) {\n    spend(d: Datum, r: Redeemer, ctx: ScriptContext) -> Bool {\n    True\n    }\n    /// This is bar\nmint(r: Redeemer, ctx    : ScriptContext  )   ->   Bool { True }\n    }\n"
---
validator foo(param1: ByteArray) {
  spend(d: Datum, r: Redeemer, ctx: ScriptContext) -> Bool {
    True
  }

  /// This is bar
  mint(r: Redeemer, ctx: ScriptContext) -> Bool {
    True
  }

  else(_ctx) {
    fail
  }
}
