crates/aiken-lang/src/tests/snapshots/format_fail.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\n!test foo() {\n  expect Some(a) = bar\n\n  a\n}\n"
---
!test foo() {
  expect Some(a) = bar

  a
}

