crates/aiken-lang/src/tests/snapshots/format_g1_element_constant.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\npub const point = #<Bls12_381, G1>\"950dfd33da2682260c76038dfb8bad6e84ae9d599a3c151815945ac1e6ef6b1027cd917f3907479d20d636ce437a41f5\"\n"
---
pub const point =
  #<Bls12_381, G1>"950dfd33da2682260c76038dfb8bad6e84ae9d599a3c151815945ac1e6ef6b1027cd917f3907479d20d636ce437a41f5"

